--- a/Fly.WebUI/Views/Cities/Index.cshtml
+++ b/Fly.WebUI/Views/Cities/Index.cshtml
@@ -12,8 +12,30 @@
                     <label class="control-label">Name</label>
                     <input asp-for="CityParameter.Name" class="form-control" />
                 </div>
+
                 @Html.HiddenFor(x=>x.RedirectUri)
                 @Html.HiddenFor(x=>x.IsSelect)
+
+                <div class="row">
+                    <div class="col">
+                        <label> OrderBy </label>
+                        @Html.DropDownListFor(x => x.CityParameter.OrderBy,
+                        new List<SelectListItem>
+                        {
+                            new SelectListItem{ Value = "Id", Text= "Id"},
+                            new SelectListItem{ Value = "Name", Text= "Name"},
+                            new SelectListItem{ Value = "IsoCountry", Text= "IsoCountry"},
+                            new SelectListItem{ Value = "IsoRegion", Text= "IsoRegion"}
+                        }, new { @class = "form-select"} )
+                    </div>
+
+                    <div class="col">
+                        <br />
+                        <label> Descresing </label>
+                        @Html.CheckBoxFor(x=>x.CityParameter.Descresing)
+                    </div>
+                </div>
+
                 <div class="col">
                     <br/>
                     <input type="submit" onclick="setStartPage()" value=@Localizer["Search"] class="btn btn-primary" />
