--- a/Fly.WebUI/Views/Airlines/Index.cshtml
+++ b/Fly.WebUI/Views/Airlines/Index.cshtml
@@ -16,23 +16,26 @@
                 @Html.HiddenFor(x=>x.RedirectUri)
                 @Html.HiddenFor(x=>x.IsSelect)
 
-                <div class="col">
-                    <label> OrderBy </label>
-                    @Html.DropDownListFor(x => x.AirlineParameter.OrderBy, 
-                        new List<SelectListItem>
-                            {
-                                new SelectListItem{ Value = "Name", Text= "Name"},
-                                new SelectListItem{ Value = "RegistrationAddress", Text= "RegistrationAddress"},
-                                new SelectListItem{ Value = "Phone", Text= "Phone"}
-                    }, new { @class = "form-select"} )
+                <div class = "row">
+                    <div class="col">
+                        <label> OrderBy </label>
+                        @Html.DropDownListFor(x => x.AirlineParameter.OrderBy, 
+                            new List<SelectListItem>
+                                {
+                                    new SelectListItem{ Value = "Id", Text= "Id"},
+                                    new SelectListItem{ Value = "Name", Text= "Name"},
+                                    new SelectListItem{ Value = "RegistrationAddress", Text= "RegistrationAddress"},
+                                    new SelectListItem{ Value = "Phone", Text= "Phone"}
+                        }, new { @class = "form-select"} )
+                    </div>
+
+                    <div class="col"> 
+                        <br />
+                        <label> Descresing </label>
+                        @Html.CheckBoxFor(x=>x.AirlineParameter.Descresing)
+                    </div>
                 </div>
 
-                <div class="col"> 
-                    <br />
-                    <label> Descresing </label>
-                    @Html.CheckBoxFor(x=>x.AirlineParameter.Descresing)
-                </div>
-               
                 <br />
                 <div class="col">
                     <br />
