--- a/Fly.WebUI/Views/Tickets/Index.cshtml
+++ b/Fly.WebUI/Views/Tickets/Index.cshtml
@@ -38,6 +38,26 @@
                 </div>
                 @Html.HiddenFor(x=>x.RedirectUri)
                 @Html.HiddenFor(x=>x.IsSelect)
+
+                <div class="row">
+                    <div class="col">
+                        <label> OrderBy </label>
+                        @Html.DropDownListFor(x => x.TicketParameter.OrderBy,
+                        new List<SelectListItem>
+                        {
+                            new SelectListItem{ Value = "Id", Text= "Id"},
+                            new SelectListItem{ Value = "Price", Text= "Price"},
+                            new SelectListItem{ Value = "SoldDate", Text= "SoldDate"}
+                        }, new { @class = "form-select"} )
+                    </div>
+
+                    <div class="col">
+                        <br />
+                        <label> Descresing </label>
+                        @Html.CheckBoxFor(x=>x.TicketParameter.Descresing)
+                    </div>
+                </div>
+
                 <div class="col">
                     <br/>
                     <input type="submit" onclick="setStartPage()" value=@Localizer["Search"] class="btn btn-primary" />
