--- a/Fly.WebUI/Views/Aircrafts/Create.cshtml
+++ b/Fly.WebUI/Views/Aircrafts/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model AircarftForCreationDto
+﻿@using Fly.Core.Entities;
+@model AircarftForCreationDto
 
 <div class="card  mx-auto" style="width:1000px">
     <img class="card-img-top" src="~/aircraft.jpg">
@@ -22,6 +23,17 @@
                 <span asp-validation-for="AirportId" class="text-danger"></span>
                 @Html.ActionLink("Select","Index","Airports", new { isSelect = true, redirectUri = "/aircrafts/create" })
             </div>
+            @if (ViewData["SelectedAirport"] != null)
+            {
+                <br />
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">@(((Airport)ViewData["SelectedAirport"]).Name)</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">@(((Airport)ViewData["SelectedAirport"]).City.Name)</h6>
+                        <a href="/airports/details/@(((Airport)ViewData["SelectedAirport"]).Id)" class="card-link">Details</a>
+                    </div>
+                </div>
+            }
             <br />
             <div class="form-group">
                 <label asp-for="ModelType" class="control-label"></label>
@@ -59,7 +71,7 @@
     </div>
 </div>
 
-@Html.AntiForgeryToken();
+@Html.AntiForgeryToken()
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
