--- a/Fly.WebUI/Views/Aircrafts/Index.cshtml
+++ b/Fly.WebUI/Views/Aircrafts/Index.cshtml
@@ -25,6 +25,25 @@
                 </div>
                 @Html.HiddenFor(x=>x.RedirectUri)
                 @Html.HiddenFor(x=>x.IsSelect)
+                <div class=" row">
+                    <div class="col">
+                        <label> OrderBy </label>
+                        @Html.DropDownListFor(x => x.AircraftParameter.OrderBy,
+                        new List<SelectListItem>
+                        {
+                            new SelectListItem{ Value = "Id", Text= "Id"},
+                            new SelectListItem{ Value = "ModelType", Text= "ModelType"},
+                            new SelectListItem{ Value = "SerialNumber", Text= "SerialNumber"},
+                            new SelectListItem{ Value = "FlightHours", Text= "FlightHours"},
+                            new SelectListItem{ Value = "AircraftState", Text= "AircraftState"},
+                        }, new { @class = "form-select"} )
+                    </div>
+                    <div class="col">
+                        <br />
+                        <label> Descresing </label>
+                        @Html.CheckBoxFor(x=>x.AircraftParameter.Descresing)
+                    </div>
+                </div>
                 <div class="col">
                     <br />
                     <input type="submit" onclick="setStartPage()" value=@Localizer["Search"] class="btn btn-primary" />
@@ -67,8 +86,8 @@
                         </thead>
                         <tbody>
                             @foreach (var item in Model.PagedResponse)
-                        {
-                            <tr>
+                            {
+                                <tr>
                                     <td>
                                         @Html.DisplayFor(modelItem => item.ModelType)
                                     </td>
@@ -111,11 +130,10 @@
                                         @Html.ActionLink("Details", "Details", new { id=item.Id })
                                     </td>
                                 </tr>
-                        }
+                            }
                         </tbody>
                     </table>
                 </div>
-                
                 <div class="col">
                     <input asp-for="MetaData.PageSize" min="1" value="@Model.MetaData.PageSize" class="form-control" />
                 </div>
