add managers and aircrafts

--- a/Fly.WebUI/Views/Managers/Details.cshtml
+++ b/Fly.WebUI/Views/Managers/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Fly.Core.Entities.Manager
 
 <div class="card mx-auto" style="width:600px">
-    <img class="card-img-top" src="~/flight.jpg">
+    <img class="card-img-top" src="~/manager.jpg">
     <div class="card-body">
     <dl class="row">
         <dt class = "col-sm-2">
