--- a/Fly.WebUI/Views/Seats/Edit.cshtml
+++ b/Fly.WebUI/Views/Seats/Edit.cshtml
@@ -22,11 +22,7 @@
                 <input asp-for="SeatClass" class="form-control" />
                 <span asp-validation-for="SeatClass" class="text-danger"></span>
             </div><br />
-            <div class="form-group">
-                <label asp-for="AircraftId" class="control-label"></label>
-                <input asp-for="AircraftId" class="form-control" />
-                <span asp-validation-for="AircraftId" class="text-danger"></span>
-            </div>
+            @Html.HiddenFor(x=>x.AircraftId)
             <br />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
