--- a/Fly.WebUI/Views/Flights/Index.cshtml
+++ b/Fly.WebUI/Views/Flights/Index.cshtml
@@ -91,7 +91,7 @@
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.ArrivalAirport.Name)
-                                    @Html.DisplayFor(modelItem => item.DepartureAirport.City.IsoCountry)
+                                    @Html.DisplayFor(modelItem => item.ArrivalAirport.City.IsoCountry)
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Aircraft.ModelType)
