start page localization

--- a/Fly.WebUI/Views/Administrator/Index.cshtml
+++ b/Fly.WebUI/Views/Administrator/Index.cshtml
@@ -4,7 +4,7 @@
 <div class="card bg-dark text-white text-center mx-auto" style="width:1000px">
     <img class="card-img" src="~/aircraft.jpg" alt="Card image">
     <div class="card-img-overlay">
-        <p class="display-1 card-title text-uppercase text-dark ">Aircrafts</p>
+        <p class="display-1 card-title text-uppercase text-dark ">@Localizer["Aircrafts"]</p>
         <a href="/aircrafts" class="stretched-link"></a>
     </div>
 </div>
@@ -12,7 +12,7 @@
 <div class="card bg-dark text-white text-center mx-auto" style="width:1000px">
     <img class="card-img" src="~/flight.jpg" alt="Card image">
     <div class="card-img-overlay">
-        <p class="display-1 card-title text-uppercase text-light ">Flight</p>
+        <p class="display-1 card-title text-uppercase text-light ">@Localizer["Flight"]</p>
         <a href="/flights" class="stretched-link"></a>
     </div>
 </div>
@@ -20,7 +20,7 @@
 <div class="card bg-dark text-dark text-center mx-auto" style="width:1000px">
     <img class="card-img" src="~/airport.jpg" alt="Card image">
     <div class="card-img-overlay">
-        <p class="display-1 card-title text-uppercase text-light ">Airports</p>
+        <p class="display-1 card-title text-uppercase text-light ">@Localizer["Airports"]</p>
         <a href="/airports" class="stretched-link"></a>
     </div>
 </div>
@@ -28,7 +28,7 @@
 <div class="card bg-dark text-dark text-center mx-auto" style="width:1000px">
     <img class="card-img" src="~/manager.jpg" alt="Card image">
     <div class="card-img-overlay">
-        <p class="display-1 card-title text-uppercase text-light ">Managers</p>
+        <p class="display-1 card-title text-uppercase text-light ">@Localizer["Managers"]</p>
         <a href="/managers" class="stretched-link"></a>
     </div>
 </div>
@@ -36,7 +36,7 @@
 <div class="card bg-dark text-white text-center mx-auto" style="width:1000px">
     <img class="card-img" src="~/airline.jpg" alt="Card image">
     <div class="card-img-overlay">
-        <p class="display-1 card-title text-uppercase text-light ">Airlines</p>
+        <p class="display-1 card-title text-uppercase text-light ">@Localizer["Airlines"]</p>
         <a href="/airlines" class="stretched-link"></a>
     </div>
 </div>
@@ -44,7 +44,7 @@
 <div class="card bg-dark text-white text-center mx-auto" style="width:1000px">
     <img class="card-img" src="~/ticket.jpg" alt="Card image">
     <div class="card-img-overlay">
-        <p class="display-1 card-title text-uppercase text-light ">Tickets</p>
+        <p class="display-1 card-title text-uppercase text-light ">@Localizer["Tickets"]</p>
         <a href="/tickets" class="stretched-link"></a>
     </div>
 </div>
@@ -52,7 +52,7 @@
 <div class="card bg-dark text-white text-center mx-auto" style="width:1000px">
     <img class="card-img" src="~/city.jpg" alt="Card image">
     <div class="card-img-overlay">
-        <p class="display-1 card-title text-uppercase text-dark ">Cities</p>
+        <p class="display-1 card-title text-uppercase text-dark ">@Localizer["Cities"]</p>
         <a href="/cities" class="stretched-link"></a>
     </div>
 </div>
