--- a/Fly.WebUI/Views/Shared/_LoginPartial.cshtml
+++ b/Fly.WebUI/Views/Shared/_LoginPartial.cshtml
@@ -1,33 +1,36 @@
-﻿@if(User.Identity.IsAuthenticated)
+﻿@using Microsoft.AspNetCore.Mvc.Localization;
+@inject IViewLocalizer Localizer
+
+@if(User.Identity.IsAuthenticated)
 {
     @if (User.IsInRole("Passenger"))
 {
     <li class="nav-item">
-            <a class="nav-link text-light" asp-area="" asp-controller="Passenger" asp-action="Index">Profile</a>
+            <a class="nav-link text-light" asp-area="" asp-controller="Passenger" asp-action="Index">@Localizer["Profile"]</a>
         </li>
 }
 else if (User.IsInRole("Manager"))
 {
     <li class="nav-item">
-            <a class="nav-link text-light" asp-area="" asp-controller="Manager" asp-action="Index">Manage</a>
+            <a class="nav-link text-light" asp-area="" asp-controller="Manager" asp-action="Index">@Localizer["Manage"]</a>
         </li>
 }
 else if (User.IsInRole("Administrator"))
 {
     <li class="nav-item">
-            <a class="nav-link text-light" asp-area="" asp-controller="Administrator" asp-action="Index">Admin</a>
+            <a class="nav-link text-light" asp-area="" asp-controller="Administrator" asp-action="Index">@Localizer["Admin"]</a>
         </li>
 }
     <li class="nav-item">
-        <a class="nav-link text-light" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a>
+        <a class="nav-link text-light" asp-area="" asp-controller="Account" asp-action="Logout">@Localizer["Logout"]</a>
     </li>
 }
 else
 {
     <li class="nav-item">
-        <a class="nav-link text-light" asp-area="" asp-controller="Account" asp-action="Register">Sign In</a>
+        <a class="nav-link text-light" asp-area="" asp-controller="Account" asp-action="Register">@Localizer["Sign In"]</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-light" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
+        <a class="nav-link text-light" asp-area="" asp-controller="Account" asp-action="Login">@Localizer["Login"]</a>
     </li>
 }
