--- a/Fly.WebUI/Views/Airlines/Edit.cshtml
+++ b/Fly.WebUI/Views/Airlines/Edit.cshtml
@@ -1,4 +1,6 @@
-﻿@model Fly.Core.Entities.Airline
+﻿@using Microsoft.AspNetCore.Mvc.Localization;
+@inject IViewLocalizer Localizer
+@model Fly.Core.Entities.Airline
 
 
 <div class="card  mx-auto" style="width:1000px">
