--- a/Fly.WebUI/Views/Home/Index.cshtml
+++ b/Fly.WebUI/Views/Home/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@using Fly.Core.Entities;
 @model Flight
+@using Microsoft.AspNetCore.Mvc.Localization;
+@inject IViewLocalizer Localizer
 
 <div class="row">
 	<div class="card"  id="flightCard" style="width: 18rem; display:none">
