--- a/Fly.WebUI/Views/Passenger/Index.cshtml
+++ b/Fly.WebUI/Views/Passenger/Index.cshtml
@@ -1,4 +1,7 @@
-﻿<div class="row">
+﻿@using Microsoft.AspNetCore.Mvc.Localization;
+@inject IViewLocalizer Localizer
+
+<div class="row">
     <dic class="col">
         <div class="card bg-dark text-white text-center mx-auto" style="width:500px">
             <img class="card-img" src="~/ticket.jpg" alt="Card image">
