--- a/Fly.WebUI/Views/Passenger/Payoff.cshtml
+++ b/Fly.WebUI/Views/Passenger/Payoff.cshtml
@@ -1,4 +1,6 @@
-﻿@model PayoffViewModel
+﻿@using Microsoft.AspNetCore.Mvc.Localization;
+@inject IViewLocalizer Localizer
+@model PayoffViewModel
 
 <div id="liqpay_checkout"></div>
   <script>
