--- a/Fly.WebUI/Views/Passenger/Profile.cshtml
+++ b/Fly.WebUI/Views/Passenger/Profile.cshtml
@@ -1,4 +1,6 @@
-﻿@using Fly.Core.Entities;
+﻿@using Microsoft.AspNetCore.Mvc.Localization;
+@inject IViewLocalizer Localizer
+@using Fly.Core.Entities;
 @model Passenger
 
 <div class="card  mx-auto" style="width:1000px">
