--- a/Fly.WebUI/Views/Seats/Edit.cshtml
+++ b/Fly.WebUI/Views/Seats/Edit.cshtml
@@ -1,5 +1,6 @@
 ﻿@model Fly.Core.Entities.Seat
-
+@using Microsoft.AspNetCore.Mvc.Localization;
+@inject IViewLocalizer Localizer
 
 <div class="card  mx-auto" style="width:1000px">
     <img class="card-img-top" src="~/seat.jpg">
