--- a/Fly.WebUI/Views/Tickets/Create.cshtml
+++ b/Fly.WebUI/Views/Tickets/Create.cshtml
@@ -1,5 +1,7 @@
 ﻿@using Fly.Core.Entities;
 @using Fly.Shared.DataTransferObjects;
+@using Microsoft.AspNetCore.Mvc.Localization;
+@inject IViewLocalizer Localizer
 @model TicketsDto
 
 <div class="card  mx-auto" style="width:1000px">
