--- a/Fly.WebUI/Views/Airports/Create.cshtml
+++ b/Fly.WebUI/Views/Airports/Create.cshtml
@@ -1,4 +1,6 @@
-﻿@using Fly.Core.Entities;
+﻿@using Microsoft.AspNetCore.Mvc.Localization;
+@inject IViewLocalizer Localizer
+@using Fly.Core.Entities;
 @model Fly.Core.Entities.Airport
 
 <div class="card  mx-auto" style="width:1000px">
