--- a/Fly.WebUI/Views/Airports/Details.cshtml
+++ b/Fly.WebUI/Views/Airports/Details.cshtml
@@ -1,4 +1,6 @@
-﻿@model Fly.Core.Entities.Airport
+﻿@using Microsoft.AspNetCore.Mvc.Localization;
+@inject IViewLocalizer Localizer
+@model Fly.Core.Entities.Airport
 
 <div class="card mx-auto" style="width:1000px">
     <img class="card-img-top" src="~/airport.jpg">
