--- a/Fly.WebUI/Views/Cities/Details.cshtml
+++ b/Fly.WebUI/Views/Cities/Details.cshtml
@@ -1,4 +1,6 @@
-﻿@model Fly.Core.Entities.City
+﻿@using Microsoft.AspNetCore.Mvc.Localization;
+@inject IViewLocalizer Localizer
+@model Fly.Core.Entities.City
 
 <div class="card  mx-auto" style="width:600px">
     <img class="card-img-top" src="~/city.jpg">
