--- a/Fly.WebUI/Views/Seats/Details.cshtml
+++ b/Fly.WebUI/Views/Seats/Details.cshtml
@@ -1,4 +1,6 @@
 ﻿@model Fly.Core.Entities.Seat
+@using Microsoft.AspNetCore.Mvc.Localization;
+@inject IViewLocalizer Localizer
 
 <div class="card mx-auto" style="width:600px">
     <img class="card-img-top" src="~/seat.jpg">
