--- a/Fly.WebUI/Views/Tickets/Details.cshtml
+++ b/Fly.WebUI/Views/Tickets/Details.cshtml
@@ -1,4 +1,6 @@
-﻿@model Fly.Core.Entities.Ticket
+﻿@using Microsoft.AspNetCore.Mvc.Localization;
+@inject IViewLocalizer Localizer
+@model Fly.Core.Entities.Ticket
 
 <div class="card mx-auto" style="width:600px">
     <img class="card-img-top" src="~/seat.jpg">
