--- a/Fly.WebUI/Views/Airports/Create.cshtml
+++ b/Fly.WebUI/Views/Airports/Create.cshtml
@@ -10,7 +10,7 @@
             <br />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="CityId" class="control-label"></label>
+                <label asp-for="CityId" class="control-label">@Localizer[""]</label>
                 <input asp-for="CityId" value="@ViewData["SelectedCityId"]" readonly class="form-control" />
                 <span asp-validation-for="CityId" class="text-danger"></span>
                 @Html.ActionLink("Select","Index","Cities", new { isSelect = true, redirectUri = "/airports/create" })
@@ -27,38 +27,38 @@
             }
             <br />
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+                <label asp-for="Name" class="control-label">@Localizer[""]</label>
                 <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <span asp-validation-for="Name" class="text-danger">@Localizer[""]</span>
             </div><br />
             <div class="form-group">
-                <label asp-for="AirportId" class="control-label"></label>
+                <label asp-for="AirportId" class="control-label">@Localizer[""]</label>
                 <input asp-for="AirportId" class="form-control" />
                 <span asp-validation-for="AirportId" class="text-danger"></span>
             </div><br />
             <div class="form-group">
-                <label asp-for="Longitude" class="control-label"></label>
+                <label asp-for="Longitude" class="control-label">@Localizer[""]</label>
                 <input asp-for="Longitude" class="form-control" />
                 <span asp-validation-for="Longitude" class="text-danger"></span>
             </div><br />
             <div class="form-group">
-                <label asp-for="Latitude" class="control-label"></label>
+                <label asp-for="Latitude" class="control-label">@Localizer[""]</label>
                 <input asp-for="Latitude" class="form-control" />
                 <span asp-validation-for="Latitude" class="text-danger"></span>
             </div><br />
             <div class="form-group">
-                <label asp-for="Altitude" class="control-label"></label>
+                <label asp-for="Altitude" class="control-label">@Localizer[""]</label>
                 <input asp-for="Altitude" class="form-control" />
                 <span asp-validation-for="Altitude" class="text-danger"></span>
             </div><br />
 
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="@Localizer["Create"]" class="btn btn-primary" />
             </div>
         </form>
         <br />
         <div>
-            <a asp-action="Index">Back</a>
+            <a asp-action="Index">@Localizer[""]</a>
         </div>
     </div>
 </div>
