--- a/Fly.WebUI/Views/Cities/Create.cshtml
+++ b/Fly.WebUI/Views/Cities/Create.cshtml
@@ -9,27 +9,27 @@
             <br />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+                <label asp-for="Name" class="control-label">@Localizer[""]</label>
                 <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <span asp-validation-for="Name" class="text-danger">@Localizer[""]</span>
             </div><br />
             <div class="form-group">
-                <label asp-for="IsoCountry" class="control-label"></label>
+                <label asp-for="IsoCountry" class="control-label">@Localizer[""]</label>
                 <input asp-for="IsoCountry" class="form-control" />
                 <span asp-validation-for="IsoCountry" class="text-danger"></span>
             </div><br />
             <div class="form-group">
-                <label asp-for="IsoRegion" class="control-label"></label>
+                <label asp-for="IsoRegion" class="control-label">@Localizer[""]</label>
                 <input asp-for="IsoRegion" class="form-control" />
                 <span asp-validation-for="IsoRegion" class="text-danger"></span>
             </div><br />
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="@Localizer["Create"]" class="btn btn-primary" />
             </div>
         </form>
         <br />
         <div>
-            <a asp-action="Index">Back to List</a>
+            <a asp-action="Index">@Localizer[""]</a>
         </div>
     </div>
 </div>
