--- a/Fly.WebUI/Views/Flights/Create.cshtml
+++ b/Fly.WebUI/Views/Flights/Create.cshtml
@@ -10,7 +10,7 @@
             <br />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="AircraftId" class="control-label"></label>
+                <label asp-for="AircraftId" class="control-label">@Localizer[""]</label>
                 <input asp-for="AircraftId" value="@ViewData["SelectedAircraftId"]" readonly class="form-control" />
                 <span asp-validation-for="AircraftId" class="text-danger"></span>
                 @Html.ActionLink("Select","Index","Aircrafts", new { isSelect = true, redirectUri = "/flights/create" })
@@ -31,7 +31,7 @@
             }
             <br />
             <div class="form-group">
-                <label asp-for="ArrivalAirportId" class="control-label"></label>
+                <label asp-for="ArrivalAirportId" class="control-label">@Localizer[""]</label>
                 <input asp-for="ArrivalAirportId" value="@ViewData["SelectedAirportId"]" readonly class="form-control" />
                 @Html.ActionLink("Select","Index","Airports", new { isSelect = true, redirectUri = "/flights/create" })
                 <span asp-validation-for="ArrivalAirportId" class="text-danger"></span>
@@ -48,21 +48,21 @@
             }
             <br />
             <div class="form-group">
-                <label asp-for="DepartureDateTime" class="control-label"></label>
+                <label asp-for="DepartureDateTime" class="control-label">@Localizer[""]</label>
                 <input asp-for="DepartureDateTime" class="form-control" />
                 <span asp-validation-for="DepartureDateTime" class="text-danger"></span>
             </div><br />
             <div class="form-group">
-                <label asp-for="ArrivalDateTime" class="control-label"></label>
+                <label asp-for="ArrivalDateTime" class="control-label">@Localizer[""]</label>
                 <input asp-for="ArrivalDateTime" class="form-control" />
                 <span asp-validation-for="ArrivalDateTime" class="text-danger"></span>
             </div><br />
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="@Localizer[""]" class="btn btn-primary" />
             </div>
         </form><br />
         <div>
-            <a asp-action="Index">Back to List</a>
+            <a asp-action="Index">@Localizer["Create"]</a>
         </div>
     </div>
 </div>
