--- a/Fly.WebUI/Views/Tickets/Create.cshtml
+++ b/Fly.WebUI/Views/Tickets/Create.cshtml
@@ -11,7 +11,7 @@
             <br />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="FlightId" class="control-label"></label>
+                <label asp-for="FlightId" class="control-label">@Localizer[""]</label>
                 <input asp-for="FlightId" readonly value="@ViewData["SelectedFlightId"]" class="form-control" />
                 <span asp-validation-for="FlightId" class="text-danger"></span>
                 @Html.ActionLink("Select","Index","Flights", new { isSelect = true, redirectUri = "/tickets/create" })
@@ -28,22 +28,22 @@
             }
             <br />
             <div class="form-group">
-                <label asp-for="EconomClassPrice" class="control-label"></label>
+                <label asp-for="EconomClassPrice" class="control-label">@Localizer[""]</label>
                 <input asp-for="EconomClassPrice" class="form-control" />
                 <span asp-validation-for="EconomClassPrice" class="text-danger"></span>
             </div><br />
             <div class="form-group">
-                <label asp-for="FirstClassPrice" class="control-label"></label>
+                <label asp-for="FirstClassPrice" class="control-label">@Localizer[""]</label>
                 <input asp-for="FirstClassPrice" class="form-control" />
                 <span asp-validation-for="FirstClassPrice" class="text-danger"></span>
             </div><br />
             <div class="form-group">
-                <label asp-for="BusinessClassPrice" class="control-label"></label>
+                <label asp-for="BusinessClassPrice" class="control-label">@Localizer[""]</label>
                 <input asp-for="BusinessClassPrice"   class="form-control" />
                 <span asp-validation-for="BusinessClassPrice" class="text-danger"></span>
             </div><br />
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="@Localizer["Create"]" class="btn btn-primary" />
             </div>
         </form><br />
     </div>
