--- a/Fly.WebUI/Views/Airlines/Create.cshtml
+++ b/Fly.WebUI/Views/Airlines/Create.cshtml
@@ -32,7 +32,7 @@
         </form>
         <br />
         <div>
-            <a asp-action="Index">@Localizer["Create"]</a>
+            <a asp-action="Index">@Localizer["Back"]</a>
         </div>
     </div>
 </div>
