--- a/Fly.WebUI/Views/Cities/Create.cshtml
+++ b/Fly.WebUI/Views/Cities/Create.cshtml
@@ -29,7 +29,7 @@
         </form>
         <br />
         <div>
-            <a asp-action="Index">@Localizer[""]</a>
+            <a asp-action="Index">@Localizer["Back"]</a>
         </div>
     </div>
 </div>
