--- a/Fly.WebUI/Views/Flights/Create.cshtml
+++ b/Fly.WebUI/Views/Flights/Create.cshtml
@@ -58,11 +58,11 @@
                 <span asp-validation-for="ArrivalDateTime" class="text-danger"></span>
             </div><br />
             <div class="form-group">
-                <input type="submit" value="@Localizer[""]" class="btn btn-primary" />
+                <input type="submit" value="@Localizer["Create"]" class="btn btn-primary" />
             </div>
         </form><br />
         <div>
-            <a asp-action="Index">@Localizer["Create"]</a>
+            <a asp-action="Index">@Localizer["Back"]</a>
         </div>
     </div>
 </div>
