--- a/Fly.WebUI/Views/Tickets/Create.cshtml
+++ b/Fly.WebUI/Views/Tickets/Create.cshtml
@@ -46,6 +46,9 @@
                 <input type="submit" value="@Localizer["Create"]" class="btn btn-primary" />
             </div>
         </form><br />
+        <div>
+            <a asp-action="Index">@Localizer["Back"]</a>
+        </div>
     </div>
 </div>
 
