--- a/Fly.WebUI/Views/Airports/Create.cshtml
+++ b/Fly.WebUI/Views/Airports/Create.cshtml
@@ -51,14 +51,13 @@
                 <input asp-for="Altitude" class="form-control" />
                 <span asp-validation-for="Altitude" class="text-danger"></span>
             </div><br />
-
             <div class="form-group">
                 <input type="submit" value="@Localizer["Create"]" class="btn btn-primary" />
             </div>
         </form>
         <br />
         <div>
-            <a asp-action="Index">@Localizer[""]</a>
+            <a asp-action="Index">@Localizer["Back"]</a>
         </div>
     </div>
 </div>
